# noled

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cmd_probe.c  cmd_probe.h  dolce_led_policy.h  led_candidate_patch.h  led_policy.h  main.c  power_led.h  power_led_patch.h  runtime_probe.h  syscon_experiment_policy.h  syscon_led_policy.h  syscon_trace.h
dev/: README.md  cmd_probe.yml  gpio_trace_policy.h  led_candidate_patch.h  main.c  noled_dev.yml  runtime_probe.h  trace_summary.h
dev/loader/: probe_candidates.h
docs/: current-next-steps.md  pch2000-power-led-research.md  runtime-testing.md  vita-slim-power-led-handoff.md  vita-slim-syscon-callsite-analysis.md  vita-slim-test-matrix.md
loader/: main.c
tests/: test_cmd_probe.c  test_dolce_led_policy.c  test_gpio_trace_policy.c  test_led_candidate_patch.c  test_led_policy.c  test_power_led.c  test_power_led_patch.c  test_runtime_probe.c  test_syscon_experiment_policy.c  test_syscon_led_policy.c  test_syscon_trace.c  test_trace_summary.c
